Caching search results in H2 database works now